--- a/tut_py_1_print.ipynb
+++ b/tut_py_1_print.ipynb
@@ -59,75 +59,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "c78e69d8-6d96-4cb2-90b4-e539d58d7c39",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The universe is a vast and mysterious expanse, stretching far beyond what our eyes can see. It's filled with billions of galaxies, each holding stars, planets, and secrets waiting to be discovered. From black holes that warp time to nebulas that birth stars, every corner holds a story. Despite its immense scale, the universe follows precise laws that hint at a hidden order. As we explore it, we not only uncover the cosmos but also understand more about ourselves.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Sometimes the line is very big:\n",
-    "# Problem: I want to print following paragraph...but it gets scrolled towards right\n",
-    "print(\"The universe is a vast and mysterious expanse, stretching far beyond what our eyes can see. It's filled with billions of galaxies, each holding stars, planets, and secrets waiting to be discovered. From black holes that warp time to nebulas that birth stars, every corner holds a story. Despite its immense scale, the universe follows precise laws that hint at a hidden order. As we explore it, we not only uncover the cosmos but also understand more about ourselves.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "6d35dad3-2838-48f4-92a9-7cffa892b8f0",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unterminated string literal (detected at line 2) (3194076693.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(\"The universe is a vast and mysterious expanse, stretching far beyond\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unterminated string literal (detected at line 2)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution that is wrong: I get error: Not a multiline message\n",
-    "print(\"The universe is a vast and mysterious expanse, stretching far beyond\n",
-    "what our eyes can see. It's filled with billions of galaxies, each holding stars,\n",
-    "planets, and secrets waiting to be discovered. From black holes that warp time \n",
-    "to nebulas that birth stars, every corner holds a story. Despite its immense scale,\n",
-    "the universe follows precise laws that hint at a hidden order. As we explore it, \n",
-    "we not only uncover the cosmos but also understand more about ourselves.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e81e1bd5-8126-44b2-b29d-22cdf9548d7d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The universe is a vast and mysterious expanse, stretching far beyond what our eyes can see. It's filled with billions of galaxies, each holding stars, planets, and secrets waiting to be discovered. From black holes that warp time to nebulas that birth stars, every corner holds a story. Despite its immense scale, the universe follows precise laws that hint at a hidden order. As we explore it, we not only uncover the cosmos but also understand more about ourselves.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Solution: print single line using backslash \\\n",
-    "print(\"The universe is a vast and mysterious expanse, stretching far beyond \\\n",
-    "what our eyes can see. It's filled with billions of galaxies, each holding stars, \\\n",
-    "planets, and secrets waiting to be discovered. From black holes that warp time \\\n",
-    "to nebulas that birth stars, every corner holds a story. Despite its immense scale, \\\n",
-    "the universe follows precise laws that hint at a hidden order. As we explore it, \\\n",
-    "we not only uncover the cosmos but also understand more about ourselves.\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e04970c2-6653-43f2-8d32-985f4fc17087",
    "metadata": {},
@@ -146,22 +77,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "238550be-5eed-47a5-a3ea-608086b4ed85",
+   "execution_count": null,
+   "id": "5d385f47-06c3-4cd1-b9e3-8e4fd0105ee6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Beneath the stars, the night wind sings,\n",
-      "Of quiet dreams and silver wings.\n",
-      "The moonlight dances on the sea,\n",
-      "A gentle world, so wild and free.\n",
-      "In silence, peace begins to grow.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Method1:\n",
     "print(\"Beneath the stars, the night wind sings,\")\n",
@@ -187,30 +106,6 @@
    },
    "source": [
     "### seperator between string"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3bf35a72-b1fb-4351-9d6b-8a7e8198b261",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "3bf35a72-b1fb-4351-9d6b-8a7e8198b261",
-    "outputId": "bd03ca4c-f24d-4075-9db8-3f697dab17e6"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. How are you? I am doing good.\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hello. How are you? I am doing good.\")"
    ]
   },
   {
@@ -436,7 +331,8 @@
     }
    ],
    "source": [
-    "# Lets make above little different \n",
+    "# Lets print above by introducing new variable msg\n",
+    "\n",
     "person  = \"Alice\"    # name is a str variable with value Alice, \n",
     "brother = \"Rahim\"    # brother is a str variable with value Rahim\n",
     "age     = 10         # age is a int variable with value 10\n",
