--- a/tut_py_2_type_part1_0_numeric_datatype_typecasting.ipynb
+++ b/tut_py_2_type_part1_0_numeric_datatype_typecasting.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "source": [
     "## Numeric Types\n",
-    "int → Whole numbers: x = 10, -4, 7, 89,\n",
+    "**int** → Whole numbers: x = 10, -4, 7, 89,\n",
     "\n",
-    "float → Decimal numbers: y = 10.5, -54.789, 3.567\n",
+    "**float** → Decimal numbers: y = 10.5, -54.789, 3.567\n",
     "\n",
-    "complex → Complex numbers: z = 3 + 4j , -1 + 2j, etc"
+    "**complex** → Complex numbers: z = 3 + 4j , -1 + 2j, etc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f6bdaf07-053b-480f-be7a-599d5a7a0a53",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type of a is <class 'int'>\n"
+      "<class 'int'>\n",
+      "type of a is <class 'int'>\n",
+      "type of b is <class 'int'>\n",
+      "type of c is <class 'float'>\n",
+      "type of d is <class 'complex'>\n"
      ]
     }
    ],
@@ -33,12 +37,12 @@
     "c = 1.2\n",
     "d = 1+2j\n",
     "\n",
-    "print(type(d))\n",
+    "print(type(a))\n",
     "\n",
-    "# print(f\"type of a is {type(a)}\")\n",
-    "# print(f\"type of b is {type(b)}\")\n",
-    "# print(f\"type of c is {type(c)}\")\n",
-    "# print(f\"type of d is {type(d)}\")"
+    "print(f\"type of a is {type(a)}\")\n",
+    "print(f\"type of b is {type(b)}\")\n",
+    "print(f\"type of c is {type(c)}\")\n",
+    "print(f\"type of d is {type(d)}\")"
    ]
   },
   {
@@ -51,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e4f14afc-4aa4-463b-9b8d-d7b5d5b6dbda",
    "metadata": {},
    "outputs": [
@@ -80,7 +84,7 @@
     "print(f\"subtraction: {res}\")   # Subtraction → 7\n",
     "\n",
     "res = a * b # apple * price_of_apple\n",
-    "print(f\"muptiplication:{res}\")   # Multiplication → 30\n",
+    "print(f\"multiplication:{res}\")   # Multiplication → 30\n",
     "\n",
     "# I can perform calculation directly inside print method\n",
     "print(a / b)   # Division → 3.3333\n",
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "843ccf58-029d-40b8-a656-279d3532305a",
    "metadata": {},
    "outputs": [
@@ -107,6 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4.0\n",
+      "0.5\n",
       "357.2508309997333\n"
      ]
     }
@@ -120,9 +126,9 @@
     "# print(x * y)   # Multiplication → 26.25\n",
     "# print(x / y)   # Division → 4.2\n",
     "\n",
-    "# print(x // y)  # Floor Division → 4.0\n",
-    "# print(x % y)   # Modulus → 0.5\n",
-    "# print(x ** y)  # Exponentiation → 237.3046875\n"
+    "print(x // y)  # Floor Division → 4.0\n",
+    "print(x % y)   # Modulus(Remainder) → 0.5\n",
+    "print(x ** y)  # Exponentiation → 237.3046875\n"
    ]
   },
   {
@@ -164,15 +170,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5406197-c653-4f6d-939b-5720e9641b4b",
+   "id": "7b8f6cae",
    "metadata": {},
    "source": [
-    "### 4. Mixed Operations (int + float + complex)"
+    "# convert str to int or float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "58eb509f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'int'>\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# step1: \n",
+    "x = \"10\"\n",
+    "print(type(x))\n",
+    "# print(x / 10) # ERROR\n",
+    "\n",
+    "\n",
+    "# step2: now convert into int\n",
+    "x = int(x) # or float(x)\n",
+    "print(type(x))\n",
+    "print(x / 10) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5406197-c653-4f6d-939b-5720e9641b4b",
+   "metadata": {},
+   "source": [
+    "### 4. Mixed Operations (int + float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f8d30e0-fad1-45cc-a84b-636c2d6a153f",
    "metadata": {},
    "outputs": [
@@ -181,25 +224,58 @@
      "output_type": "stream",
      "text": [
       "7.5\n",
-      "(5+15j)\n",
-      "(3.5+3j)\n"
+      "<class 'float'>\n"
      ]
     }
    ],
    "source": [
     "num1 = 5      # int\n",
     "num2 = 2.5    # float\n",
+    "\n",
+    "print(num1 + num2)   \n",
+    "print(type(num1 + num2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c2252a",
+   "metadata": {},
+   "source": [
+    "### 5. Mixed Operations (int + float+ complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb4190fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num1 = 5      # int\n",
+    "num2 = 2.5    # float\n",
     "num3 = 1 + 3j # complex\n",
     "\n",
-    "print(num1 + num2)   # 7.5 (int + float → float)\n",
-    "print(num1 * num3)   # (5+15j) (int * complex → complex)\n",
-    "print(num2 + num3)   # (3.5+3j) (float + complex → complex)"
+    "\n",
+    "print(num2 + num3)   \n",
+    "print(type(num2 + num3))   \n",
+    "\n",
+    "print(num1 * num3)   \n",
+    "print(type(num1 * num3))\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa1d0b94-6293-41ef-bbc4-47f16e83ac25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
