--- a/tut_py_2_type_part1_1_str_list_tuple.ipynb
+++ b/tut_py_2_type_part1_1_str_list_tuple.ipynb
@@ -62,9 +62,10 @@
     "\n",
     "# # Slicing : [start_position: end_position: step_size]. \n",
     "# # start_position by default is 0, end_position by default is last idx, step_size by default is 1\n",
-    "print(s[1:7:2]) # 'yhn' (From index 1 to 6 with  step size 2) \n",
+    "print(s[1:7:1]) # 'ython '\n",
+    "# print(s[1:7:2]) # 'yhn' (From index 1 to 6 with  step size 2) \n",
     "# print(s[1:4])  # 'yth' (From index 1 to 3)\n",
-    "# print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11.with  step size 1) \n",
+    "# print(s[1:13:3]) # 'yoie' (From index 1 to 4 to 7 to 11 with  step size 1) \n",
     "\n",
     "# print(s[:3])   # This is s[0:3:1]: 'Pyt' (First 3 characters)\n",
     "# print(s[2:])   # This is s[2:last_idx:1]: 'thon is easy to learn' (From index 2 to end)\n",
@@ -117,12 +118,12 @@
     "print(\"5555555555555555555555555555555\\n\")\n",
     "\n",
     "msg = \"today, is a good day, to learn something new.\"\n",
-    "# msg = \"2025-08-23,ash,34,1000,34.78\"\n",
+    "# msg = \"2025-08-23,ash,34,000,34.78\"\n",
     "lst = msg.split(\",\")\n",
     "print(lst) # ['today', ' is a good day', ' to learn something new.']\n",
     "\n",
     "\n",
-    "msg = \"2025-08-23;ash;34;1000;34.78\"\n",
+    "msg = \"2025-08-23;ash;34,000;34.78\"\n",
     "lst = msg.split(\";\")\n",
     "print(lst) "
    ]
@@ -207,7 +208,7 @@
    "metadata": {},
    "source": [
     "### 2️. List (list) Operations\n",
-    "- A list is an **ordered, mutable** collection of elements.\n",
+    "- A list is an **ordered, mutable** collection of elements. (**Ordered** means that the elements of list are printed in the order in which they were entered. This is not True for dict and set)\n",
     "- can contain **duplicates**\n",
     "- are heterogenous (can contain elements of different kind)"
    ]
@@ -321,9 +322,9 @@
     "print(\"1111111111111111111111111111\\n\")\n",
     "\n",
     "# Slicing\n",
-    "print(numbers[1:3])  # slice 2nd number to 3rd number: [20, 30]\n",
-    "print(numbers[:3])   # slice [10, 20, 30]\n",
-    "print(numbers[2:])   # slice from index 2 to last [30, 40, 50]\n",
+    "print(numbers[1:3])  # slice from idx=1 to idx=3: [30, 60]\n",
+    "print(numbers[:3])   # slice [10, 30, 60]\n",
+    "print(numbers[2:])   # slice from index 2 to last [60, 70, 50]\n",
     "print(numbers[::2]) # from begin to end with step size =2\n",
     "print(numbers[::-1]) # reverse\n",
     "print(\"222222222222222222222222222222\\n\")"
@@ -371,22 +372,21 @@
     "numbers.pop(2) # works on actual index\n",
     "print(f\"numbers after pop: {numbers}\")\n",
     "\n",
+    "## list is mutable\n",
+    "numbers = [10, 20, 30, 40, 50]\n",
+    "numbers[2] = 25\n",
+    "print(f\"mutablility: numbers: {numbers}\")\n",
     "\n",
     "#########Assignment############\n",
     "# How to put -6 in the begining of list ?\n",
     "numbers = [10, 20, 30, 40, 50]\n",
     "numbers.insert(0,-6)\n",
-    "print(f\"numbers after insert in the begn: {numbers}\")\n",
-    "\n",
-    "## list is mutable\n",
-    "numbers = [10, 20, 30, 40, 50]\n",
-    "numbers[2] = 25\n",
-    "print(f\"mutablility: numbers: {numbers}\")"
+    "print(f\"numbers after insert in the begin: {numbers}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "359cf52c-fe63-4f75-a454-495634df9a91",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,10 @@
      "output_type": "stream",
      "text": [
       "['apple', 'banana', ['cherry', 'date']]\n",
-      "['apple', 'banana', 'cherry', 'date']\n"
+      "3\n",
+      "##################\n",
+      "['apple', 'banana', 'cherry', 'date']\n",
+      "4\n"
      ]
     }
    ],
@@ -405,11 +408,14 @@
     "fruits_new = ['cherry', 'date']\n",
     "fruits.append(fruits_new)\n",
     "print(fruits)\n",
+    "print(len(fruits))\n",
+    "print(\"##################\")\n",
     "\n",
     "fruits = ['apple', 'banana']\n",
     "fruits_new = ['cherry', 'date']\n",
     "fruits.extend(fruits_new) # extend unpacks the list\n",
-    "print(fruits)"
+    "print(fruits)\n",
+    "print(len(fruits))"
    ]
   },
   {
@@ -441,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "9ea18133-605d-414d-8462-458905056ccd",
    "metadata": {},
    "outputs": [
@@ -560,7 +566,7 @@
     }
    ],
    "source": [
-    "#MISCELLANEOUS: lets create a list of 12 consecutive int starting with 1\n",
+    "# MISCELLANEOUS: lets create a list of 12 consecutive int starting with 1\n",
     "l = list(range(1,13))\n",
     "print(f\"range: {l}\")\n",
     "\n",
@@ -605,6 +611,7 @@
     "print(len(numbers))\n",
     "print(sorted(numbers)) # NOTE: it would not work if list contains int, str, bool mixed type\n",
     "\n",
+    "# a simple application:\n",
     "average = sum(numbers)/len(numbers)\n",
     "print(average)"
    ]
@@ -632,7 +639,7 @@
     }
    ],
    "source": [
-    "# 1. Basic Nested List\n",
+    "# 1. Basic Nested List: simulates matrix\n",
     "\n",
     "matrix = [\n",
     "    [1, 2, 3, 4],\n",
@@ -680,6 +687,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "3a0a5f9e-46a6-4242-84cc-8bfa4ff0fdb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 99, 3], [4, 5, 6], [7, 8, 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Modifying a Nested List\n",
+    "matrix = [\n",
+    "    [1, 2, 3],\n",
+    "    [4, 5, 6],\n",
+    "    [7, 8, 9]\n",
+    "]\n",
+    "\n",
+    "# print(matrix[0][1])\n",
+    "matrix[0][1] = 99  # Change element at row idx=0, column idx=1\n",
+    "\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "8b90ec57-b597-4228-9c49-1c7515ee994d",
    "metadata": {},
@@ -695,7 +730,7 @@
     }
    ],
    "source": [
-    "# 3. OPTIONAL: For Looping Through a Nested List\n",
+    "# 4. OPTIONAL: For Looping Through a Nested List\n",
     "matrix = [\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
@@ -706,34 +741,6 @@
     "    for element in row:\n",
     "        print(element, end=\" \")\n",
     "    print()  # New line after each row\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "3a0a5f9e-46a6-4242-84cc-8bfa4ff0fdb8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 99, 3], [4, 5, 6], [7, 8, 9]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# 4. Modifying a Nested List\n",
-    "matrix = [\n",
-    "    [1, 2, 3],\n",
-    "    [4, 5, 6],\n",
-    "    [7, 8, 9]\n",
-    "]\n",
-    "\n",
-    "# print(matrix[0][1])\n",
-    "matrix[0][1] = 99  # Change element at row idx=0, column idx=1\n",
-    "\n",
-    "print(matrix)"
    ]
   },
   {
@@ -804,6 +811,7 @@
     "print(tpl)\n",
     "print(type(tpl))\n",
     "\n",
+    "#OPTIONAL: SKIP\n",
     "# one_item_tpl = (\"apple\",) # mind the comma for it creates tuples\n",
     "# print(one_item_tpl)\n",
     "# print(type(one_item_tpl))\n",
@@ -816,12 +824,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4815537e-f85a-4c2a-b8b5-346a5d8e3fac",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, 25.75)\n",
+      "('Jessa', 'Emma', 'Kelly')\n",
+      "('Jessa', 30, 45.75, [25, 78])\n",
+      "((1, 2, 7.3), 'ash', 1234, 54, 12000)\n"
+     ]
+    }
+   ],
    "source": [
-    "# number tuple\n",
+    "# tuple can contain various types of elements:\n",
+    "\n",
+    "# number tuple: int, float\n",
     "t = (10, 20, 25.75)\n",
     "print(t)\n",
     "\n",
@@ -829,13 +850,12 @@
     "t = ('Jessa', 'Emma', 'Kelly')\n",
     "print(t)\n",
     "\n",
-    "# mixed type tuple\n",
+    "# mixed type tuple: string,int,float,list\n",
     "t = ('Jessa', 30, 45.75, [25, 78])\n",
     "print(t)\n",
     "\n",
-    "# create a tuple using tuple() constructor\n",
-    "t = tuple(('Jessa', 30, 45.75, [23, 78]))\n",
-    "print(t)\n"
+    "t = ((1,2,7.3), \"ash\",1234,54,12000)\n",
+    "print(t)"
    ]
   },
   {
@@ -861,7 +881,6 @@
     }
    ],
    "source": [
-    "# Tuple declaration\n",
     "fruits = (\"apple\", \"banana\", \"cherry\")\n",
     "\n",
     "# Accessing elements\n",
@@ -926,35 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "f3ca0a6f-3727-45cd-ba71-a26481841271",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(10, 20, [25, 75, 85])\n",
-      "(10, 20, [250, 75, 85])\n"
-     ]
-    }
-   ],
-   "source": [
-    "# If one of the items is itself a mutable data type as a list, then we \n",
-    "# can change its values in the case of a nested tuple.\n",
-    "tuple1 = (10, 20, [25, 75, 85])\n",
-    "# before update\n",
-    "print(tuple1)\n",
-    "\n",
-    "# modify last item's first value\n",
-    "tuple1[2][0] = 250\n",
-    "# after update\n",
-    "print(tuple1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "b60bc49b-b32a-4162-988b-18fc7511f3e7",
    "metadata": {},
    "outputs": [
@@ -968,17 +959,17 @@
     }
    ],
    "source": [
-    "tuple1 = (10, 20, 60, 30, 60, 40, 60)\n",
-    "count = tuple1.count(60) # Count all occurrences of item 60\n",
+    "t = (10, 20, 60, 30, 60, 40, 60)\n",
+    "count = t.count(60) # Count all occurrences of item 60\n",
     "print(count)\n",
     "\n",
-    "count = tuple1.count(600)\n",
+    "count = t.count(600)\n",
     "print(count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "dada237b-ba77-4c4f-88a0-a3e6c9a9f089",
    "metadata": {},
    "outputs": [
@@ -994,11 +985,72 @@
     }
    ],
    "source": [
-    "tuple1 = (10, 20, 60, 30, 60, 40, 60)\n",
-    "print(min(tuple1))\n",
-    "print(max(tuple1))\n",
-    "print(sum(tuple1))\n",
-    "print(len(tuple1))\n"
+    "t = (10, 20, 60, 30, 60, 40, 60)\n",
+    "print(min(t))\n",
+    "print(max(t))\n",
+    "print(sum(t))\n",
+    "print(len(t))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9565d1c3-aa27-49c2-a471-cc840b04df85",
+   "metadata": {},
+   "source": [
+    "# STOP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c88f24c-fc3c-4c36-b842-5b2c383112fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ce1282c-9602-4660-9fdf-40a22e46e9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316bcbbb-fbc8-40a2-a0be-4519d6cea915",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f3ca0a6f-3727-45cd-ba71-a26481841271",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 20, [25, 75, 85])\n",
+      "(10, 20, [250, 75, 85])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OPTIONAL: SKIP\n",
+    "# If one of the items is itself a mutable data type as a list, then we \n",
+    "# can change its values in the case of a nested tuple.\n",
+    "tuple1 = (10, 20, [25, 75, 85])\n",
+    "# before update\n",
+    "print(tuple1)\n",
+    "\n",
+    "# modify last item's first value\n",
+    "tuple1[2][0] = 250\n",
+    "# after update\n",
+    "print(tuple1)"
    ]
   },
   {
@@ -1026,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
