--- a/tut_py_2_type_part3_loop_for_range_listcomprehension_while_break_continue.ipynb
+++ b/tut_py_2_type_part3_loop_for_range_listcomprehension_while_break_continue.ipynb
@@ -93,7 +93,7 @@
     "for i in [0,1,2,3]:\n",
     "    print(\"hello\")\n",
     "    print(\"I am trapped in for loop\") \n",
-    "    print(\"Whats going on?\")\n",
+    "    print(\"Finished\")\n",
     "\n",
     "print(\"###############\")\n",
     "\n",
@@ -101,13 +101,13 @@
     "for i in [0,1,2,3]:\n",
     "    print(\"hello\")\n",
     "    print(\"I am trapped in for loop\") \n",
-    "print(\"Whats going on?\")\n",
+    "print(\"Finished\")\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "20d82859",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,16 @@
       "I am trapped in for loop\n",
       "3:hello\n",
       "I am trapped in for loop\n",
-      "Whats going on?\n"
+      "Finished\n",
+      "0 * 2 = 0 \n",
+      "I am trapped in for loop\n",
+      "1 * 2 = 2 \n",
+      "I am trapped in for loop\n",
+      "2 * 2 = 4 \n",
+      "I am trapped in for loop\n",
+      "3 * 2 = 6 \n",
+      "I am trapped in for loop\n",
+      "Finished\n"
      ]
     }
    ],
@@ -145,12 +154,21 @@
     "for i in [0,1,2,3]:\n",
     "    print(f\"{i}:hello\")\n",
     "    print(\"I am trapped in for loop\") \n",
-    "print(\"Whats going on?\")\n"
+    "print(\"Finished\")\n",
+    "\n",
+    "\n",
+    "# STEP3: lets perform some math on elements: multiply all elements by 2\n",
+    "for i in [0,1,2,3]:\n",
+    "    res = i * 2\n",
+    "    print(f\"{i} * 2 = {res} \")\n",
+    "    print(\"I am trapped in for loop\") \n",
+    "print(\"Finished\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "6bf3db47",
    "metadata": {},
    "outputs": [
@@ -163,7 +181,6 @@
       "cherry\n",
       "jackfruit\n",
       "#########################\n",
-      "mango kiwi cherry jackfruit #########################\n",
       "I love mango\n",
       "I love kiwi\n",
       "I love cherry\n",
@@ -176,14 +193,7 @@
     "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
     "for i in fruits:\n",
     "    print(i)\n",
-    "\n",
-    "\n",
-    "print(\"#########################\")\n",
-    "\n",
-    "#2) prints all elements of a list with all element on a single\n",
-    "fruits = [\"mango\", \"kiwi\", \"cherry\", \"jackfruit\"]\n",
-    "for i in fruits:\n",
-    "    print(i, end=\" \")\n",
+    "    \n",
     "\n",
     "print(\"#########################\")\n",
     "\n",
@@ -195,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "164613b8",
    "metadata": {},
    "outputs": [
@@ -223,7 +233,7 @@
    ],
    "source": [
     "# APPLICATIONS:\n",
-    "# I want to see the data type of all elements in a list\n",
+    "# step1: I want to see the data type of all elements in a list\n",
     "l = [4, 5.98, True, \"ad astra\", ] # list with assorted element\n",
     "\n",
     "#method1\n",
@@ -233,13 +243,14 @@
     "print(type(l[3]))\n",
     "print(\"###########################\")\n",
     "\n",
-    "# method2: I can redo above using for loop\n",
+    "# step2: I can redo above using for loop\n",
     "for i in l:\n",
     "    print(type(i))\n",
     "    \n",
-    "print(\"######I am out of for loop############\")\n",
+    "print(\"FINISHED\")\n",
+    "\n",
     "print(\"###########################\")\n",
-    "# method3: I want to redo above with a meaningful output\n",
+    "# step3: I want to redo above with a meaningful output\n",
     "for i in l:\n",
     "    print(f\"The iterator i is {i} and its type is {type(i)}\") # here I am printing element and its data type\n"
    ]
@@ -280,51 +291,29 @@
     "# range(start, stop, step): Generates a sequence from start up to (but not including) stop, incrementing by step.\n",
     "# default step=1\n",
     "\n",
-    "# STEP1:\n",
-    "for i in range(0,4): # here start=0, stop=4\n",
-    "    print(\"hello\")\n",
-    "    print(\"I am trapped in for loop\") \n",
-    "\n",
-    "print(\"Whats going on?\")\n",
-    "\n",
-    "# change 4 -> 10, etc\n",
-    "\n",
-    "\n",
-    "\n",
-    "#STEP2: Now lets use iterator variable i\n",
     "for i in range(0,4): # here start=0, stop=4\n",
     "    print(f\"{i} hello\") # here I am accessing iterator i\n",
     "    print(\"I am trapped in for loop\") \n",
     "    \n",
-    "print(\"Whats going on?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "17fc7ed4-f1e1-448b-8003-694f3b41f2c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The i value is 0\n",
-      "The i value is 4\n",
-      "The i value is 8\n",
-      "The i value is 12\n"
-     ]
-    }
-   ],
-   "source": [
-    "# lets add the step in range\n",
+    "print(\"finished\")\n",
+    "\n",
+    "#################################\n",
+    "# Lets perform some math on elements: multiply all elements by 2\n",
+    "for i in [0,1,2,3]:\n",
+    "    res = i * 2\n",
+    "    print(f\"{i} * 2 = {res} \")\n",
+    "    print(\"I am trapped in for loop\") \n",
+    "print(\"Finished\")\n",
+    "\n",
+    "##################################\n",
+    "# lets add the step in range: 0,4,8,12\n",
     "for i in range(0,16,4): # start=0, stop=16, step=4\n",
     "    print(f\"The i value is {i}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "83658d8b-bff1-448c-8ef0-962cc48dc97c",
    "metadata": {},
    "outputs": [
@@ -337,18 +326,12 @@
     }
    ],
    "source": [
-    "# I want number: 100,103,106,109,112,115,118,121,124,127,130,133,136,139,142,145,148,\n",
-    "for i in range(100,150,3): # start=100, stop=150, step=3\n",
-    "    # print(f\"The i value is {i}\")\n",
-    "    print(i, end=\",\")\n",
-    "\n",
-    "# l = [100,103,106,109,112,115,118,121,124,127,130,133,136,139,142,145,148,]\n",
-    "# print(l)"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "3c4faaed-a501-4c23-a9a8-6e995bebb977",
    "metadata": {},
    "outputs": [
@@ -365,12 +348,17 @@
    "source": [
     "# APPLICATION of range:\n",
     "\n",
-    "# Aside: I want to create a list of numbers from 0 to 6\n",
-    "# method1 ....long\n",
-    "l1 = [0, 1, 2, 3, 4, 5, 6] \n",
-    "print(l1)\n",
+    "# APPLICATION: I want number: 100,103,106,109,112,115,118,121,124,127,130,133,136,139,142,145,148,\n",
+    "for i in range(100,150,3): # start=100, stop=150, step=3\n",
+    "    # print(f\"The i value is {i}\")\n",
+    "    print(i, end=\",\")\n",
     "\n",
-    "# method2 ....short\n",
+    "# l = [100,103,106,109,112,115,118,121,124,127,130,133,136,139,142,145,148,]\n",
+    "# print(l)\n",
+    "print(\"###################################\")\n",
+    "\n",
+    "\n",
+    "#I want to create a list of numbers from 0 to 6\n",
     "l2 = list(range(0,7)) \n",
     "print(l2)\n",
     "print(\"################\")\n",
@@ -435,7 +423,7 @@
    "id": "b47e65cd-5bc9-490f-9a27-d276256a19ea",
    "metadata": {},
    "source": [
-    "### for loop practice"
+    "### for loop application"
    ]
   },
   {
@@ -563,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "9233b52c-9c21-4e61-b33f-305c4f49f69f",
    "metadata": {},
    "outputs": [
@@ -592,7 +580,7 @@
     }
    ],
    "source": [
-    "# PRACTICE\n",
+    "# APPLICATION\n",
     "\n",
     "# Lets add numbers from 1 to 500\n",
     "# STEP1: start with small range:  Lets add numbers from 1 to 4 \n",
@@ -659,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "d050f00f-fd4c-4e47-b8b6-879fecffaeb4",
    "metadata": {},
    "outputs": [
@@ -701,10 +689,17 @@
     "        print(f\"Found target! Exiting the for loop\")\n",
     "        break # NOTE: comment it out to see what happens without it\n",
     "print(\"Loop finished\")\n",
-    "print(\"#####################\")      \n",
-    "    \n",
-    "\n",
-    "# 2) search for a number in a list:\n",
+    "print(\"#####################\")      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1fdcab33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# APPLICATION: for+break: search for a number in a list:\n",
     "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14]\n",
     "\n",
     "target = 70\n",
@@ -732,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "4bbfc1aa-2618-4421-83f0-edcee0ec903f",
    "metadata": {},
    "outputs": [
@@ -777,9 +772,17 @@
     "    print(f\"number: {i}\")\n",
     "        \n",
     "print(\"Loop finished\")\n",
-    "print(\"#####################\")      \n",
-    "\n",
-    "# 2) Add 5 to all numbers except when number=65\n",
+    "print(\"#####################\")      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8096e8b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# APPLICATYION: for + contiue Add 5 to all numbers except when number=65\n",
     "numbers = [5, 23, 8, 43, 7, 3, 65, 16, 3, 14]\n",
     "\n",
     "for i in numbers:\n",
@@ -907,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "cd1f4b60-8ce9-4b03-a64f-478e6361c07a",
    "metadata": {},
    "outputs": [
@@ -924,6 +927,7 @@
     }
    ],
    "source": [
+    "# SKIP: ADVANCED\n",
     "# 2. List Comprehension with Condition...here we print all even numbers\n",
     "\n",
     "# EXAMPLE1: Get even numbers from 1 to 10.\n",
@@ -980,37 +984,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "549e9568-fa72-4165-9181-1f03bbfb09af",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['I', 'i', 'o', 'i', 'i', 'o', 'u', 'a', 'i', 'i', 'i', 'a', 'e', 'o', 'e']\n"
-     ]
-    }
-   ],
-   "source": [
-    "#  Real-World Example: Extract Vowels from a String in order they appear.\n",
-    "sentence = \"It is snowing in  mountains. This is awesome\"\n",
-    "vowels = [c for c in sentence if c.lower() in 'aeiou']\n",
-    "print(vowels)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "eb7f518e-ea22-48dc-8e1d-c6303ef0de85",
    "metadata": {},
    "source": [
-    "## practice for "
+    "## for application "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "47d6c9f9-b253-47c7-b0ae-65df7836868d",
    "metadata": {},
    "outputs": [
@@ -1031,6 +1014,13 @@
     }
    ],
    "source": [
+    "# APPLICATION: Real-World Example: Extract Vowels from a String in order they appear.\n",
+    "sentence = \"It is snowing in  mountains. This is awesome\"\n",
+    "vowels = [c for c in sentence if c.lower() in 'aeiou']\n",
+    "print(vowels)\n",
+    "\n",
+    "\n",
+    "############################################################\n",
     "# Prints a pyramid shape with a specified number of rows.\n",
     "\n",
     "rows = 8 # 4 , 5, 6\n",
@@ -1048,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "c332d5c7-8580-4d44-b817-3820692d6e7d",
    "metadata": {},
    "outputs": [
@@ -1065,6 +1055,7 @@
     }
    ],
    "source": [
+    "# APPLICATION\n",
     "# Prints an inverted pyramid shape with a specified number of rows.\n",
     "\n",
     "rows = 3\n",
@@ -1082,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0de265a2-29fc-4597-9132-d5b07737687c",
    "metadata": {},
    "outputs": [
@@ -1102,6 +1093,7 @@
     }
    ],
    "source": [
+    "# APPLICATION\n",
     "# Prints a diamond shape with out nested for loop\n",
     "\n",
     "# rows (int): The number of rows in the top half of the diamond.\n",
@@ -1412,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d9888897-aa17-4059-a336-218b6e023883",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1427,7 @@
     }
    ],
    "source": [
-    "#OPTIONAL: Prints a mirrored left-angled triangle.\n",
+    "#APPLICATION for inside for: Prints a mirrored left-angled triangle.\n",
     "\n",
     "print(\"*\", end=\" \")\n",
     "print()\n",
@@ -1564,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "f34e87b3-f2ca-48b4-8a72-b290f736e4fa",
    "metadata": {},
    "outputs": [
@@ -1577,8 +1569,7 @@
       "3\n",
       "4\n",
       "5\n",
-      "#################\n",
-      "1 2 3 4 5 "
+      "#################\n"
      ]
     }
    ],
@@ -1590,14 +1581,7 @@
     "while i <= 5:\n",
     "    print(i)\n",
     "    i += 1  # Increment i\n",
-    "print(\"#################\")\n",
-    "\n",
-    "# print 1 2 3 4 5 on one line\n",
-    "i = 1\n",
-    "while i <= 5:\n",
-    "    print(i, end=\" \")\n",
-    "    i += 1  # Increment i\n",
-    "\n"
+    "print(\"#################\")\n"
    ]
   },
   {
@@ -1691,7 +1675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ade7ccac-c251-4cf4-80bb-d4751a6cb359",
    "metadata": {},
    "outputs": [
@@ -1703,8 +1687,7 @@
       "2\n",
       "3\n",
       "Stopping at 4\n",
-      "##############\n",
-      "1 2 3 4 5 "
+      "##############\n"
      ]
     }
    ],
@@ -1719,15 +1702,7 @@
     "        break  # Exit the loop\n",
     "    print(i)\n",
     "    i += 1\n",
-    "print(\"##############\")\n",
-    "\n",
-    "# print 1 2 3 4 5 \n",
-    "i = 1\n",
-    "while True:\n",
-    "    print(i, end=\" \")\n",
-    "    i += 1  # Increment i\n",
-    "    if i == 6:\n",
-    "        break"
+    "print(\"##############\")"
    ]
   },
   {
@@ -1752,7 +1727,7 @@
     }
    ],
    "source": [
-    "# 4. Using continue in a while Loop to skip certain iteration\n",
+    "# APPLICATIONS: Using continue in a while Loop to skip certain iteration\n",
     "\n",
     "# print 1 2 4 5 on each newline...skips 3\n",
     "i = 0\n",
@@ -1798,7 +1773,7 @@
    "id": "947b03ea-984c-4581-a578-57153b7ab6a6",
    "metadata": {},
    "source": [
-    "## Real world example\n",
+    "## Real world application\n",
     "ATM Withdrawal Simulation\n",
     "\n",
     "This example simulates an ATM where a user can withdraw money until their balance runs out or they exit."
@@ -1912,7 +1887,7 @@
    "id": "31f8bccc-003f-4067-bf7d-afb6690e73bc",
    "metadata": {},
    "source": [
-    "## more examples of \"for, if, break, continue\" "
+    "## more applications of \"for, if, break, continue\" "
    ]
   },
   {
@@ -2081,7 +2056,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
