--- a/tut_py_2_type_part2_input_conditional_ifelse.ipynb
+++ b/tut_py_2_type_part2_input_conditional_ifelse.ipynb
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "# Example: Checking a student's score\n",
+    "# Example: Checking a student's score using only if\n",
     "score = 6  # change\n",
     "\n",
     "if score > 5:\n",
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "# Example: Checking a student's score\n",
+    "# Example: Checking a student's score using if - else\n",
     "score = 4  # previously 10\n",
     "\n",
     "if score > 5:\n",
@@ -81,7 +81,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "0887b2e3-b4c4-4a2a-997a-5e766f18d0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter whats on your mind: 44444\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "Ohh...that's great...44444\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OPTIONAL: ask user for input: TODO\n",
+    "msg = input(\"Please enter whats on your mind:\")\n",
+    "\n",
+    "print(type(msg)) # always is string\n",
+    "print(f\"Ohh...that's great...{msg}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "70dae8a0-9f62-4cbc-a699-254b73cc844a",
    "metadata": {},
    "outputs": [
@@ -90,41 +120,61 @@
      "output_type": "stream",
      "text": [
       "Enter your name:  ash\n",
-      "Enter your age:  45\n"
+      "Enter your age:  120\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello ash! You are younger than 100 year old man.\n"
+      "Hey ash, you are older than 100 years old man.\n"
      ]
     }
    ],
    "source": [
-    "# Program to calculate the year user turns 100, with an if condition\n",
+    "#STEP1: Program to display a msg depending on his age: uses if-elif-else condition\n",
+    "\n",
     "name = input(\"Enter your name: \")\n",
-    "age = int(input(\"Enter your age: \"))\n",
+    "age  = input(\"Enter your age: \")\n",
+    "age = int(age)\n",
     "\n",
     "if age < 100:\n",
     "    print(f\"Hello {name}! You are younger than 100 year old man.\")\n",
     "elif age == 100:\n",
     "    print(f\"Wow {name}, you're already 100 years old this year!\")\n",
     "else:\n",
-    "    print(f\"Hey {name}, you are older than 100 years old man.\")\n"
+    "    print(f\"Hey {name}, you are older than 100 years old man.\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e1564d31-7736-486e-a83a-41feefcbc336",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name:  ash\n",
+      "Enter your age:  26\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello ash! You will turn 100 years old in the year 2099.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Program to calculate the year user turns 100, with an if condition\n",
+    "#STEP2: Program to calculate the year user turns 100, with an if-elif-else condition\n",
     "\n",
     "name = input(\"Enter your name: \")\n",
-    "age = int(input(\"Enter your age: \"))\n",
+    "age  = input(\"Enter your age: \")\n",
+    "age  = int(age)\n",
     "\n",
     "current_year = 2025\n",
     "\n",
@@ -139,12 +189,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "f27b155a-a1c1-4071-9729-6435e0610dfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number: 56\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Even number\n"
+     ]
+    }
+   ],
    "source": [
-    "num = 7\n",
+    "# display message if number is even or odd\n",
+    "# num = 8\n",
+    "\n",
+    "num = int(input(\"Enter number:\"))\n",
+    "# num = int(num)\n",
     "\n",
     "if num % 2 == 0:\n",
     "    print(\"Even number\")\n",
@@ -154,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "98492e67-7dd9-4a18-b929-a68f2d6f13f0",
    "metadata": {},
    "outputs": [
@@ -162,13 +231,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Grade: B\n",
-      "Good work\n"
+      "Grade: F\n",
+      "Buddy wake up. Start studying.\n"
      ]
     }
    ],
    "source": [
-    "marks = 85\n",
+    "# Students are given grades based on their marks\n",
+    "marks = 56\n",
     "\n",
     "if marks >= 90:\n",
     "    print(\"Grade: A\")\n",
@@ -196,7 +266,7 @@
    "id": "f365f1f3-f9d1-4a18-a3e5-8a26dd661abc",
    "metadata": {},
    "source": [
-    "# if + and + or"
+    "# if + or"
    ]
   },
   {
@@ -208,28 +278,39 @@
    "source": [
     "# if with 'or'\n",
     "\n",
-    "#e.g.1\n",
+    "#e.g.1: Check if the age is less than 13 or greater than 65\n",
     "age = 16\n",
-    "if age < 13 or age > 65:  # Check if the age is less than 13 or greater than 65\n",
+    "\n",
+    "if age < 13 or age > 65:  \n",
     "    print(\"You are eligible for a child or senior ticket.\")\n",
     "else:\n",
     "    print(\"You are eligible for an adult ticket.\")\n",
     "print(\"######################\")\n",
     "\n",
-    "#e.g.2\n",
+    "#e.g.2: Ask user whether he wants to continue and check that he enter only yes and no.\n",
     "user_input = input(\"Do you want to continue? (yes/no): \").strip().lower()\n",
+    "# print(user_input)\n",
+    "\n",
     "if user_input == \"yes\" or user_input == \"no\":  # Check if the input is valid\n",
     "    print(\"Thank you for your response.\")\n",
     "else:\n",
     "    print(\"Invalid input. Please enter 'yes' or 'no'.\")\n",
     "\n",
-    "#e.g.3\n",
-    "temp = 95\n",
+    "#e.g.3: design a logic that print weather alert when temp < 32 or > 90\n",
+    "temp = 50\n",
     "\n",
-    "if temp < 32 or temp > 90: # TODO\n",
+    "if temp < 32 or temp > 90: \n",
     "    print(\"Weather alert\")\n",
     "else:\n",
     "    print(\"Weather normal\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b244d45-1fab-4cf2-a9fd-51ceb9b7e7c4",
+   "metadata": {},
+   "source": [
+    "# if + and"
    ]
   },
   {
@@ -254,7 +335,7 @@
     "\n",
     "print(\"##################\")\n",
     "\n",
-    "#e.g.2\n",
+    "#e.g.2: Give 20% discount if member is gold and purchase amount > 100\n",
     "membership_status = \"gold\"\n",
     "purchase_amount = 150 \n",
     "\n",
@@ -263,7 +344,7 @@
     "else:\n",
     "    print(\"You are not eligible for a discount.\")\n",
     "\n",
-    "#e.g.3\n",
+    "#e.g.3: design logic for -> student passes if score > 70 and attendance > 75%\n",
     "exam_score = 78\n",
     "attendance_percentage = 85  # Attendance in percentage\n",
     "\n",
@@ -271,6 +352,14 @@
     "    print(\"Congratulations! You have passed the course.\")\n",
     "else:\n",
     "    print(\"You need to improve your score or attendance to pass.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9af005c9-194e-46bc-bc77-6402f3aed1ac",
+   "metadata": {},
+   "source": [
+    "# if + and + or"
    ]
   },
   {
@@ -323,30 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "11d71c83-44e8-4caa-8963-02020bbca355",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Milk is on the list.\n"
-     ]
-    }
-   ],
-   "source": [
-    "shopping_list = [\"milk\", \"bread\", \"eggs\"]\n",
-    "\n",
-    "if \"milk\" in shopping_list:\n",
-    "    print(\"Milk is on the list.\")\n",
-    "else:\n",
-    "    print(\"Milk is not on the list.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "3f149afa-c1a2-4a11-ab69-5677e946bf97",
    "metadata": {},
    "outputs": [
@@ -359,8 +425,9 @@
     }
    ],
    "source": [
+    "# Check if item is in shopping list\n",
     "shopping_list = [\"milk\", \"bread\", \"eggs\"]\n",
-    "item = \"milk\"\n",
+    "item = \"milk\" # put butter\n",
     "\n",
     "if item in shopping_list:\n",
     "    print(f\"{item} is on the list.\")\n",
@@ -370,31 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "2701eb86-e40f-49b5-b846-e80518449641",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "butter is not on the list.\n"
-     ]
-    }
-   ],
-   "source": [
-    "shopping_list = [\"milk\", \"bread\", \"eggs\"]\n",
-    "item = \"butter\"\n",
-    "\n",
-    "if item in shopping_list:\n",
-    "    print(f\"{item} is on the list.\")\n",
-    "else:\n",
-    "    print(f\"{item} is not on the list.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "1c643cc6-4b00-4a32-917c-e319625db19d",
    "metadata": {},
    "outputs": [
@@ -402,14 +445,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are eligible to drive.\n"
+      "You are too young to drive.\n"
      ]
     }
    ],
    "source": [
-    "# Nested if Statement\n",
-    "age = 20\n",
-    "has_license = True\n",
+    "# Nested if Statement: Implement following logic:\n",
+    "\n",
+    "# If age > 18 and has license, then eligible to drive\n",
+    "# if age > 18 and no license, then cannot drive\n",
+    "# if age < 18, then not eligible to drive\n",
+    "\n",
+    "age = 12\n",
+    "has_license = False\n",
     "\n",
     "if age >= 18:\n",
     "    if has_license:\n",
@@ -419,6 +467,14 @@
     "else:\n",
     "    print(\"You are too young to drive.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e74b1228-c4f5-458e-8fb4-ed17c78d7cb9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -437,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
